--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -133,7 +134,8 @@
         <div class="col">
           <div class="container pt-5">
             <h1>Are You Ready To Get Started</h1>
-            <p class="d-none d-md-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur sunt non dolores ad pariatur repudiandae mollitia sit omnis eum odit.</p>
+            <p class="d-none d-md-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur sunt non
+              dolores ad pariatur repudiandae mollitia sit omnis eum odit.</p>
           </div>
         </div>
       </div>
@@ -147,7 +149,8 @@
       <div class="row">
         <div class="col-md-6 align-self-center">
           <h3>Loren Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nihil porro quidem ipsa, omnis repellendus sint! Maxime quam consectetur similique?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nihil porro quidem ipsa, omnis repellendus
+            sint! Maxime quam consectetur similique?</p>
           <a href="#" class="btn btn-outline-danger btn-lg">Learn More</a>
         </div>
         <div class="col-md-6">
@@ -164,7 +167,8 @@
       <div class="row">
         <div class="col">
           <div class="container p-5">
-            <a href="#" class="video" data-video="https://www.youtube.com/embed/HnwsG9a5riA" data-toggle="modal" data-target="#videoModal">
+            <a href="#" class="video" data-video="https://www.youtube.com/embed/HnwsG9a5riA" data-toggle="modal"
+              data-target="#videoModal">
               <i class="fas fa-play fa-3x"></i>
             </a>
             <h1>See What We Do</h1>
@@ -173,6 +177,98 @@
       </div>
     </div>
   </section>
+
+  <!-- PHOTO GALLERY -->
+
+  <section id="gallery" class="py-5">
+    <div class="container">
+      <h1 class="text-center">Photo Gallery</h1>
+      <p class="text-center">Check out our photos</p>
+
+      <!-- First Row Of Images -->
+      <div class="row mb-4">
+
+        <div class="col-md-4">
+          <a href="https://source.unsplash.com/random/560x560" data-toggle="lightbox" data-gallery="img-gallery"
+            data-height="560" data-width="560">
+            <img src="https://source.unsplash.com/random/560x560" alt="" class="img-fluid">
+          </a>
+        </div>
+
+        <div class="col-md-4">
+          <a href="https://source.unsplash.com/random/561x561" data-toggle="lightbox" data-gallery="img-gallery"
+            data-height="561" data-width="561">
+            <img src="https://source.unsplash.com/random/561x561" alt="" class="img-fluid">
+          </a>
+        </div>
+
+        <div class="col-md-4">
+          <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox" data-gallery="img-gallery"
+            data-height="562" data-width="562">
+            <img src="https://source.unsplash.com/random/562x562" alt="" class="img-fluid">
+          </a>
+        </div>
+
+      </div>
+
+      <!-- Second Row Of Images -->
+      <div class="row mb-4">
+
+        <div class="col-md-4">
+          <a href="https://source.unsplash.com/random/563x563" data-toggle="lightbox" data-gallery="img-gallery"
+            data-height="563" data-width="563">
+            <img src="https://source.unsplash.com/random/563x563" alt="" class="img-fluid">
+          </a>
+        </div>
+
+        <div class="col-md-4">
+          <a href="https://source.unsplash.com/random/564x564" data-toggle="lightbox" data-gallery="img-gallery"
+            data-height="564" data-width="564">
+            <img src="https://source.unsplash.com/random/564x564" alt="" class="img-fluid">
+          </a>
+        </div>
+
+        <div class="col-md-4">
+          <a href="https://source.unsplash.com/random/565x565" data-toggle="lightbox" data-gallery="img-gallery"
+            data-height="565" data-width="565">
+            <img src="https://source.unsplash.com/random/565x565" alt="" class="img-fluid">
+          </a>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+
+  <!-- NEWSLETTER -->
+
+  <section id="newsletter" class="text-center p-5 bg-dark text-white">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1>Sign Up For Our Newsletter</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sequi culpa praesentium excepturi tempore
+            nulla nam earum quae. Nam, numquam.</p>
+          <form class="form-inline justify-content-center">
+            <input type="text" class="form-control mb-2 mr-2" placeholder="Enter Name">
+            <input type="text" class="form-control mb-2 mr-2" placeholder="Enter Email">
+            <button class="btn btn-primary mb-2">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer id="main-footer" class="text-center p4 bg-primary text-white">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <p class="mt-4">Copyright &copy; <span id="year"></span> Glozzom</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <!-- VIDEO MODAL -->
 
@@ -201,6 +297,8 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
+
   <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
@@ -211,6 +309,13 @@
       pause: 'hover'
 
     });
+
+    // Lightbox Init
+    $(document).on('click', '[data-toggle="lightbox"]', function (event) {
+      event.preventDefault();
+      $(this).ekkoLightbox();
+    });
+
 
     // Video Play
     $(function () {
@@ -225,7 +330,7 @@
         });
       });
     });
-    
+
   </script>
 </body>
 
